# rust-basic-examples

./: .env  .pre-commit-config.yaml  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
ai/examples/: agent.rs  mcp.rs
basic/: Cargo.toml
basic/examples/: area_chart.rs  arrays.rs  async.rs  chrono_gui.rs  config.rs  date_time_duration.rs  date_time_durations.rs  debugging.rs  decimals.rs  destructuring.rs  diagram_charts.rs  diesel.rs  enum.rs  env.rs  file_operations.rs  format_string.rs  generics.rs  iterators.rs  logging_and_tracing.rs  mdbook.rs  option.rs  option_result.rs  postgres_query.rs  profiling.rs  reflection.rs  result.rs  serialization_deserialization.rs  sleep.rs  smart_pointers.rs  state_machine.rs  strings.rs  struct_update.rs  testing.rs
cli/: Cargo.toml
cli/examples/: cli_app.rs  completions.rs  print_colors.rs  process_and_commands.rs  progress_status.rs
cli/tests/: cli_app_tests.rs
di/: Cargo.toml
di/examples/: di_generics.rs
dioxus/: Cargo.toml
dioxus/assets/: main.css
dioxus/examples/: dioxus_webapp.rs
docker/: Dockerfile
examples/: Cargo.toml  api_request.rs  area_chart.rs  buffered_stdout.rs  chrono_gui.rs  cli_app.rs  collections.rs  date_time_durations.rs  di_enum.rs  di_trait_objects.rs  enum.rs  error_handling.rs  excel_read_and_write.rs  file_operations.rs  fluent_interface_pattern.rs  iterators.rs  macros.rs  mdbook.rs  postgres_query.rs  strings.rs  testing.rs  trait_objects.rs
examples/examples/: area_chart.rs  base64.rs  cli_app.rs  destructuring.rs  macros_declarative.rs  macros_proc.rs  macros_std.rs  print_colors.rs  progress_status.rs
macros/: Cargo.toml
macros/examples/: declarative_macros.rs  proc_macros.rs  std_macros.rs
patterns/examples/: cqrs_event_sourcing.rs  di_enum.rs  di_generics.rs  di_trait_objects.rs  fluent_interface.rs
proc_macros_examples/: Cargo.toml
proc_macros_examples/src/: lib.rs
proc_macros_lib/: Cargo.toml
proc_macros_lib/src/: lib.rs
testing/: Cargo.toml
testing/examples/: bdd.rs  coverage.rs  fake_mock_seam.rs  fixture.rs  model_checking.rs  nextest.rs  profiling.rs  setup_teardown.rs  test_case.rs  tests_env.rs  webdriver.rs
web/: Cargo.toml
web/examples/: api_request.rs  grpc.rs  mail.rs  rest_api_server.rs  scraping.rs  web_server.rs
