[workspace]
members = [
    "ai",
    "basic",
    "cli",
    "dioxus",
    "docker",
    "macros",
    "patterns",
    "proc_macros_lib",
    "testing",
    "web",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.96"
indoc = "2.0.6"
tempfile = "3.16.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
