[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
iced = { version = "0.13.1", features = ["async-std"] }
itertools = "0.14.0"
plotters = "0.3.7"
rand = "0.9.0"
rstest = "0.24.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.12"
