[package]
name = "basic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
humantime = "2.1.0"
iced = { version = "0.13.1", features = ["async-std"] }
indoc = { workspace = true }
itertools = "0.14.0"
log = "0.4.27"
plotters = "0.3.7"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
