[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
assert_cmd = "2.0.16"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
escargot = "0.5.13"
exitcode = "1.1.2"
indicatif = "0.17.9"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = { workspace = true }
indoc = { workspace = true }
run_script = "0.11.0"
